--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,4 +12,5 @@ $gray: rgb(70, 70, 70);
 $near-black: rgb(33, 37, 41);
 $black: black;
 $black-transparant: rgba(0, 0, 0, 0.2);
+$black-transparant-darker: rgba(0, 0, 0, 0.5);
 $white-transparant: rgba(255, 255, 255, 0.7);
